# planar-computer-use

./: .gitignore  Dockerfile  README.md  main.py  planar.dev.yaml  pyproject.toml
os_atlas_run_local/: README.md  app.py  pyproject.toml  requirements.txt
planar_computer_use/: agents.py  grounding.py  models.py  osatlas.py  pil_utilities.py  routes.py  tools.py  utils.py  vnc_manager.py  workflows.py
planar_computer_use/static/: index.html
planar_computer_use/templates/: index.html
